--- a/enHueco/Views/Base.lproj/Main.storyboard
+++ b/enHueco/Views/Base.lproj/Main.storyboard
@@ -382,39 +382,39 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="En Hueco" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEt-tN-vRQ">
                                         <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="82" id="unj-Fy-IGi"/>
+                                            <constraint firstAttribute="width" constant="82" id="y0h-Qf-iAq"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                         <variation key="default">
                                             <mask key="constraints">
-                                                <exclude reference="unj-Fy-IGi"/>
+                                                <exclude reference="y0h-Qf-iAq"/>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=compact">
                                             <mask key="constraints">
-                                                <include reference="unj-Fy-IGi"/>
+                                                <include reference="y0h-Qf-iAq"/>
                                             </mask>
                                         </variation>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JKe-wz-2W3">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JKe-wz-2W3">
                                         <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="45" id="1JH-cZ-42n"/>
+                                            <constraint firstAttribute="width" constant="25" id="dgA-Fk-ZWC"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                        <state key="normal" title="S">
+                                        <state key="normal" image="search.png">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <variation key="default">
                                             <mask key="constraints">
-                                                <exclude reference="1JH-cZ-42n"/>
+                                                <exclude reference="dgA-Fk-ZWC"/>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=compact">
                                             <mask key="constraints">
-                                                <include reference="1JH-cZ-42n"/>
+                                                <include reference="dgA-Fk-ZWC"/>
                                             </mask>
                                         </variation>
                                         <connections>
@@ -426,11 +426,11 @@
                                 <color key="backgroundColor" red="0.0" green="0.63529411764705879" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="81" id="3oy-up-TWo"/>
-                                    <constraint firstItem="JKe-wz-2W3" firstAttribute="trailing" secondItem="Itw-db-KJt" secondAttribute="trailingMargin" id="LH1-YA-ID5"/>
-                                    <constraint firstItem="JKe-wz-2W3" firstAttribute="top" secondItem="Itw-db-KJt" secondAttribute="top" constant="24" id="bdK-0P-aIq"/>
-                                    <constraint firstItem="rEt-tN-vRQ" firstAttribute="centerX" secondItem="Itw-db-KJt" secondAttribute="centerX" id="qzN-Xc-2tW"/>
-                                    <constraint firstItem="JKe-wz-2W3" firstAttribute="centerY" secondItem="rEt-tN-vRQ" secondAttribute="centerY" id="uFb-3z-iiB"/>
-                                    <constraint firstItem="rEt-tN-vRQ" firstAttribute="top" secondItem="Itw-db-KJt" secondAttribute="top" constant="39" id="zqp-Dw-ygE"/>
+                                    <constraint firstItem="rEt-tN-vRQ" firstAttribute="top" secondItem="Itw-db-KJt" secondAttribute="top" constant="39" id="Jw9-c1-X1C"/>
+                                    <constraint firstItem="JKe-wz-2W3" firstAttribute="top" secondItem="rEt-tN-vRQ" secondAttribute="top" id="Lc1-gG-E3n"/>
+                                    <constraint firstAttribute="trailing" secondItem="JKe-wz-2W3" secondAttribute="trailing" constant="21" id="PV8-Q6-SKq"/>
+                                    <constraint firstItem="rEt-tN-vRQ" firstAttribute="centerX" secondItem="Itw-db-KJt" secondAttribute="centerX" id="d1v-vd-yU1"/>
+                                    <constraint firstAttribute="bottom" secondItem="JKe-wz-2W3" secondAttribute="bottom" constant="17" id="fBC-cr-Ipo"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="subviews">
@@ -439,11 +439,11 @@
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="3oy-up-TWo"/>
-                                        <exclude reference="qzN-Xc-2tW"/>
-                                        <exclude reference="zqp-Dw-ygE"/>
-                                        <exclude reference="LH1-YA-ID5"/>
-                                        <exclude reference="bdK-0P-aIq"/>
-                                        <exclude reference="uFb-3z-iiB"/>
+                                        <exclude reference="Jw9-c1-X1C"/>
+                                        <exclude reference="d1v-vd-yU1"/>
+                                        <exclude reference="Lc1-gG-E3n"/>
+                                        <exclude reference="PV8-Q6-SKq"/>
+                                        <exclude reference="fBC-cr-Ipo"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
@@ -453,11 +453,11 @@
                                     </mask>
                                     <mask key="constraints">
                                         <include reference="3oy-up-TWo"/>
-                                        <include reference="qzN-Xc-2tW"/>
-                                        <include reference="zqp-Dw-ygE"/>
-                                        <include reference="LH1-YA-ID5"/>
-                                        <include reference="bdK-0P-aIq"/>
-                                        <include reference="uFb-3z-iiB"/>
+                                        <include reference="Jw9-c1-X1C"/>
+                                        <include reference="d1v-vd-yU1"/>
+                                        <include reference="Lc1-gG-E3n"/>
+                                        <include reference="PV8-Q6-SKq"/>
+                                        <include reference="fBC-cr-Ipo"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -637,7 +637,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1HD-8a-T4R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-657" y="1564.5"/>
+            <point key="canvasLocation" x="-604.5" y="1584.75"/>
         </scene>
         <!--Friends View Controller-->
         <scene sceneID="EZN-Z8-WCM">
@@ -830,7 +830,7 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="FGy-G1-EPz" secondAttribute="trailing" id="8Qy-2e-PhY"/>
                             <constraint firstItem="FGy-G1-EPz" firstAttribute="leading" secondItem="RaC-1r-OXt" secondAttribute="leading" id="Duc-WX-ebJ"/>
-                            <constraint firstItem="16l-Wy-NoV" firstAttribute="top" secondItem="FGy-G1-EPz" secondAttribute="bottom" id="TKl-aB-Wpa"/>
+                            <constraint firstItem="16l-Wy-NoV" firstAttribute="top" secondItem="FGy-G1-EPz" secondAttribute="bottom" id="S1y-uv-YPA"/>
                             <constraint firstItem="FGy-G1-EPz" firstAttribute="top" secondItem="RaC-1r-OXt" secondAttribute="topMargin" id="Wwm-HP-zPG"/>
                             <constraint firstAttribute="trailing" secondItem="16l-Wy-NoV" secondAttribute="trailing" id="del-at-DhP"/>
                             <constraint firstItem="16l-Wy-NoV" firstAttribute="leading" secondItem="RaC-1r-OXt" secondAttribute="leading" id="two-vr-thq"/>
@@ -842,13 +842,13 @@
                                 <exclude reference="FGy-G1-EPz"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="zWw-hA-GOx"/>
-                                <exclude reference="TKl-aB-Wpa"/>
-                                <exclude reference="del-at-DhP"/>
-                                <exclude reference="two-vr-thq"/>
                                 <exclude reference="8Qy-2e-PhY"/>
                                 <exclude reference="Duc-WX-ebJ"/>
                                 <exclude reference="Wwm-HP-zPG"/>
+                                <exclude reference="S1y-uv-YPA"/>
+                                <exclude reference="del-at-DhP"/>
+                                <exclude reference="two-vr-thq"/>
+                                <exclude reference="zWw-hA-GOx"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -857,13 +857,13 @@
                                 <include reference="FGy-G1-EPz"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="zWw-hA-GOx"/>
-                                <include reference="TKl-aB-Wpa"/>
-                                <include reference="del-at-DhP"/>
-                                <include reference="two-vr-thq"/>
                                 <include reference="8Qy-2e-PhY"/>
                                 <include reference="Duc-WX-ebJ"/>
                                 <include reference="Wwm-HP-zPG"/>
+                                <include reference="S1y-uv-YPA"/>
+                                <include reference="del-at-DhP"/>
+                                <include reference="two-vr-thq"/>
+                                <include reference="zWw-hA-GOx"/>
                             </mask>
                         </variation>
                     </view>
@@ -2712,6 +2712,9 @@
             <point key="canvasLocation" x="175.5" y="1591.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="search.png" width="160" height="160"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="O9m-HI-ujz"/>
     </inferredMetricsTieBreakers>
